20060320 code: general compiler warning squashes. casts.
20060321 code: sys_err now takes const char * strings instead of char *.
20060324 code: added array_data()
20060325 code: hashtable.h HASH_BUCKETS == 2048 like the documentation
               says!
20060329 code: minor style nit in sstring_trunc.c
20060330 doc: LICENSE added
20060422 code: dstring rewritten to avoid leaks. slight changes to
               interface and behaviour. updated tests.
20060422 code: sys_err renamed to syserr.
20060422 note: now totally incompatible with corelib-0.1.
20060422 version: corelib-0.2
20060428 code: moved SYS_DEPS to SYSDEPS for upcoming coreproject
               updates.
20060428 version: corelib-0.3 (no release)
20060501 code: array_init no longer returns 2 if the array is allocated.
               if it ever really becomes necessary to check if an array
               is allocated in the future, there'll be an
               array_allocated() macro.
20060501 code: updated to latest sysdeps.
20060501 code: array_trunc is now equivalent to array_chop(a, 0);
               trying to make things a little more unified.
20060502 code: renamed makefile-local to Mkfile-local and restructured
               slightly due to cpj-genmk updates.
20060502 code: further restructuring for cpj-genmk changes.
20060507 code: updated to cpj-genmk-0.6
20060507 code: added sysmath-libs and conf-ldfflist
20060507 version: corelib-0.31
20060510 code: updated to cpj-genmk-0.7
20060510 code: updated to latest sysdeps
20060523 code: buffer no longer uses uint32, but uses unsigned int.
               this may break binary compatibility, but this is no
               problem as corelib is currently totally incompatible
               with earlier versions anyway.
20060523 code: buffer_copy and test.
20060523 code: changed dir_array so that it no longer relies on uint32.
20060523 code: added dir_hash and test.
20060523 code: added dir_name, base_name and tests.