@@ -5,6 +5,7 @@ str_dup.o
 str_ends.o
 str_len.o
 str_ncopy.o
+str_ndiff.o
 str_rchr.o
 str_starts.o
 str_tolower.o
